# arbitrage-strategy

./: .gitignore  CLAUDE.md  arbitrage.txt  pyproject.toml  restart_all.ps1  stop_all.ps1
.claude/: settings.json
core/: AGENT_REVIEW_2026-05-11.md  ARCHITECTURE.md  P2_DECISIONS_2026-05-11.md  PLAN.md  RISK.md
scripts/: risk_drill.py  run_all_tests.py  run_replay.py  run_shadow_executor.py  run_train_histgbt.py  show_overnight_summary.py
src/dashboard/: app_arb.py  arb_blueprint.py
src/data/: bybit_l2_ws.py  dex_quote.py  factory_lookup.py  gas_oracle.py  ingestion_main.py
src/exec/: bundle_simulator.py  bybit_leg.py  calldata.py  coordinator.py  dex_leg.py  flashbots_executor.py  live_ramp.py  (+3 more)
tests/: test_arb_p3_hardening.py  test_arb_personal_use_extensions.py  test_arb_personal_use_v2.py  test_arb_phase0_bootstrap.py  test_arb_phase10_drift.py  test_arb_phase11_paper.py  test_arb_phase12_live_ramp.py  test_arb_phase13_drl.py  test_arb_phase1_dashboard.py  test_arb_phase1_ingestion.py  test_arb_phase1_obi.py  test_arb_phase1_storage.py  test_arb_phase2_dashboard.py  test_arb_phase2_detector.py  test_arb_phase2_opportunity.py  test_arb_phase3_dashboard.py  test_arb_phase3_inventory.py  test_arb_phase3_replay.py  test_arb_phase4_dashboard.py  test_arb_phase4_ops.py  test_arb_phase4_risk.py  test_arb_phase4x_dashboard_endpoints.py  test_arb_phase5_coordinator.py  test_arb_phase5_exec_units.py  test_arb_phase5x_calldata.py  test_arb_phase6_histgbt.py  test_arb_phase7_tft.py  test_arb_phase8_multirelay.py  test_arb_phase9_security.py  test_arb_rereview_fixes.py
(+20 files in other folders)
