[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage_strategy"
version = "0.0.1"
description = "CEX-DEX statistical arbitrage on Bybit Spot <-> Base L2 DEX"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "polars>=0.20",
    "pandas>=2.0",
    "numpy>=1.26",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "ccxt>=4.0",
    "web3>=6.15",
    "eth-account>=0.10",
    "flask>=3.0",
    "filelock>=3.13",
    "pydantic>=2.6",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "darts>=0.27",
    "river>=0.21",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Path-editable dependency on the sister project.
# Uncomment + run `pip install -e .` after Phase 0 first-install step.
# [tool.uv.sources]
# ai_trading_assistance = { path = "../AI trading assistance", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
